# transfer

./: .gitignore  README.md  check_model_device.py  evaluation_after.json  evaluation_before.json  evaluation_comparison.json  pyproject.toml  setup.py
examples/: run_sft_Llama.py  run_sft_evaluate_Llama.py  sft.py  sft_Llama.py
notebook/: chapter_2.ipynb
notebook/(4) fine_tuning/: Qwen_sft.ipynb  skk_dataset_config.yaml
notebook/(4) fine_tuning/dataset/: ksmi_test_topic_modelled.jsonl  ksmi_val_topic_modelled.jsonl
test/unit/evaluate/: test_perplex.py  test_perplex_output.py
transfer/: __init__.py  cli.py  config.py  evaluation.py  trainer.py  utils.py
transfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
transfer/strategies/: base.py  dpo.py  sft.py
